--- a/DISTJOIN.vcxproj
+++ b/DISTJOIN.vcxproj
@@ -151,7 +151,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Algoritmo.h" />
-    <ClInclude Include="metodos.h" />
+    <ClInclude Include="Textos.h" />
     <ClInclude Include="Nodo.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
